fix text alignment

--- a/public/assets/scss/elements/_portfolio.scss
+++ b/public/assets/scss/elements/_portfolio.scss
@@ -153,6 +153,7 @@
             p {
                 color: #c6c9d8;
                 font-size: 14px;
+                text-align: justify;
             }
             h4 {
                 font-size: 24px;
