--- a/public/assets/scss/template/_portfolio-details.scss
+++ b/public/assets/scss/template/_portfolio-details.scss
@@ -66,6 +66,7 @@
             line-height: 30px;
             color: rgba(29, 29, 36, 0.75);
             margin-bottom: 30px;
+            text-align: justify;
             
             @media #{$lg-layout} {
                 margin-bottom: 22px;
